tests/fixtures/positive/style/FunctionOnlyReturningConstant.kt
package style

fun getValue() = 42

fun getName(): String = "hello"

fun isEnabled(): Boolean = true
