tests/fixtures/negative/style/FunctionOnlyReturningConstant.kt
package style

fun getValue(x: Int) = x * 2

fun getName(prefix: String): String = "$prefix-world"

fun isEnabled(flag: Boolean): Boolean = !flag
